--- a/TutorialsVSB/Viewer/Viewer.vcxproj
+++ b/TutorialsVSB/Viewer/Viewer.vcxproj
@@ -275,6 +275,7 @@ copy "$(ANTTWEAKBAR_BIN)\*.dll" "$(OutDir)"</Command>
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="demo2.cpp" />
+    <ClCompile Include="demo3.cpp" />
     <ClCompile Include="mouse.cpp" />
     <ClCompile Include="program.cpp" />
     <ClCompile Include="sceneManager.cpp" />
@@ -316,11 +317,14 @@ copy "$(ANTTWEAKBAR_BIN)\*.dll" "$(OutDir)"</Command>
     <ClInclude Include="demo2.h">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">false</ExcludedFromBuild>
     </ClInclude>
+    <ClInclude Include="demo3.h" />
     <ClInclude Include="demos.h" />
+    <ClInclude Include="entity_Cube.h" />
     <ClInclude Include="entity_Tetraedr_Simple.h" />
     <ClInclude Include="mouse.h" />
     <ClInclude Include="sceneManager.h" />
     <ClInclude Include="stdafx.h" />
+    <ClInclude Include="vao_CubeV3C4N3.h" />
     <ClInclude Include="vao_TetraedrV3C4.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
