fixed texture2 bind + step parallax

--- a/TutorialsVSB/Viewer/Viewer.vcxproj.filters
+++ b/TutorialsVSB/Viewer/Viewer.vcxproj.filters
@@ -36,7 +36,9 @@
     <ClCompile Include="demo8.cpp">
       <Filter>Demos</Filter>
     </ClCompile>
-    <ClCompile Include="demo9.cpp" />
+    <ClCompile Include="demo9.cpp">
+      <Filter>Demos</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="demos.h">
@@ -181,6 +183,8 @@
     <ClInclude Include="demo8.h">
       <Filter>Demos</Filter>
     </ClInclude>
-    <ClInclude Include="demo9.h" />
+    <ClInclude Include="demo9.h">
+      <Filter>Demos</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
