--- a/TutorialsVSB/Viewer/Viewer.vcxproj
+++ b/TutorialsVSB/Viewer/Viewer.vcxproj
@@ -275,6 +275,7 @@ copy "$(ANTTWEAKBAR_BIN)\*.dll" "$(OutDir)"</Command>
     </Lib>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Demo10.cpp" />
     <ClCompile Include="demo2.cpp" />
     <ClCompile Include="demo3.cpp" />
     <ClCompile Include="demo4.cpp" />
@@ -283,6 +284,7 @@ copy "$(ANTTWEAKBAR_BIN)\*.dll" "$(OutDir)"</Command>
     <ClCompile Include="demo7.cpp" />
     <ClCompile Include="demo8.cpp" />
     <ClCompile Include="demo9.cpp" />
+    <ClCompile Include="DemoProjekt.cpp" />
     <ClCompile Include="mouse.cpp" />
     <ClCompile Include="program.cpp" />
     <ClCompile Include="sceneManager.cpp" />
@@ -322,6 +324,7 @@ copy "$(ANTTWEAKBAR_BIN)\*.dll" "$(OutDir)"</Command>
     <ClInclude Include="CoreHeaders\vao_GridXY.h" />
     <ClInclude Include="CoreHeaders\vao_SceneOrigin.h" />
     <ClInclude Include="CoreHeaders\vcDefs.h" />
+    <ClInclude Include="Demo10.h" />
     <ClInclude Include="demo2.h">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">false</ExcludedFromBuild>
     </ClInclude>
@@ -332,6 +335,7 @@ copy "$(ANTTWEAKBAR_BIN)\*.dll" "$(OutDir)"</Command>
     <ClInclude Include="demo7.h" />
     <ClInclude Include="demo8.h" />
     <ClInclude Include="demo9.h" />
+    <ClInclude Include="DemoProjekt.h" />
     <ClInclude Include="demos.h" />
     <ClInclude Include="entity_Cube.h" />
     <ClInclude Include="entity_Tetraedr_Simple.h" />
