--- a/TutorialsVSB/Viewer/Viewer.vcxproj.filters
+++ b/TutorialsVSB/Viewer/Viewer.vcxproj.filters
@@ -39,8 +39,12 @@
     <ClCompile Include="demo9.cpp">
       <Filter>Demos</Filter>
     </ClCompile>
-    <ClCompile Include="DemoProjekt.cpp" />
-    <ClCompile Include="Demo10.cpp" />
+    <ClCompile Include="Demo10.cpp">
+      <Filter>Demos</Filter>
+    </ClCompile>
+    <ClCompile Include="DemoProjekt.cpp">
+      <Filter>Demos</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="demos.h">
@@ -188,7 +192,11 @@
     <ClInclude Include="demo9.h">
       <Filter>Demos</Filter>
     </ClInclude>
-    <ClInclude Include="DemoProjekt.h" />
-    <ClInclude Include="Demo10.h" />
+    <ClInclude Include="Demo10.h">
+      <Filter>Demos</Filter>
+    </ClInclude>
+    <ClInclude Include="DemoProjekt.h">
+      <Filter>Demos</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
