--- a/TutorialsVSB/Viewer/Viewer.vcxproj
+++ b/TutorialsVSB/Viewer/Viewer.vcxproj
@@ -338,12 +338,14 @@ copy "$(ANTTWEAKBAR_BIN)\*.dll" "$(OutDir)"</Command>
     <ClInclude Include="DemoProjekt.h" />
     <ClInclude Include="demos.h" />
     <ClInclude Include="entity_Cube.h" />
+    <ClInclude Include="entity_Particles.h" />
     <ClInclude Include="entity_Tetraedr_Simple.h" />
     <ClInclude Include="mouse.h" />
     <ClInclude Include="sceneManager.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="vao_CubeV3C4N3.h" />
     <ClInclude Include="vao_CubeV3C4N3T2.h" />
+    <ClInclude Include="vao_particle.h" />
     <ClInclude Include="vao_TetraedrV3C4.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
